# nixpkgs-review-quality

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: pytest-full.yml  pytest-lite.yml  pytest.yml
quality/agents/: __init__.py
quality/agents/clients/: __init__.py  base_client.py  mistralai.py  openai.py
quality/agents/enum/: agents.py
quality/agents/prompts/: agent_system_prompt.md
quality/cli/: entrypoint.py  review.py
quality/data/: __init__.py  review_points.db
quality/data/database/: db_init.py  session.py
quality/data/enum/: review_points_topic.py
quality/data/models/: __init__.py  base.py  example.py  review_point.py
quality/data/repositories/: example_repo.py  review_point_repo.py
quality/review/: reviewer.py  utils.py
quality/review/messages/: default_review_message.md
quality/review/services/: agent.py  example.py  github.py  reporter.py  review_point.py  topic.py
quality/review_points/: __init__.py  review_points.db
quality/review_points/database/: db_init.py  session.py
src/: github_module.py  main.py  review.py
src/agents/: __init__.py
src/cli/: entrypoint.py  review.py
src/review/: reviewer.py  topic.py  utils.py
src/review_points/: __init__.py  review_points.db  review_points.py
tests/: test_cli.py  test_db_format.py  test_repo_example.py  test_repo_review_points.py  test_review_reviewer.py  test_review_service_agent.py  test_review_service_example.py  test_review_service_github.py  test_review_service_reporter.py  test_review_service_topic.py  test_topic.py
(+25 files in other folders)
