[project]
name = "nixpkgs-review-py-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.12.4",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
    "sqlite-web>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
