[project]
name = "nixpkgs-review-quality"
version = "0.1.0"
description = "Tool for reviewing nixpkgs PRs using LLMs and prompt engineering."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistralai>=1.12.4",
    "openai>=2.28.0",
    "pygithub>=2.8.1",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quality"]

[project.scripts]
nixpkgs-review-quality = "quality.cli.entrypoint:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pylint>=4.0.5",
    "sqlite-web>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
